--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="pages/index.css" />
     <link rel="stylesheet" href="vendor/normalize.css" />
-    <link rel="icon" type="image" href="favicon.ico" />
+    <link rel="icon" type="favicon-image" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -38,10 +38,10 @@
         <section id="reservation" class="reservation"></section>
         <section id="menu" class="menu"></section>
         <section id="about" class="about"></section>
-        <footer class="footer">
-          <p></p>
-        </footer>
       </main>
+      <footer class="footer">
+        <p></p>
+      </footer>
     </div>
   </body>
 </html>
