--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="pages/index.css" />
     <link rel="stylesheet" href="vendor/normalize.css" />
-    <link rel="icon" type="favicon-image" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -33,7 +33,7 @@
           </ul>
         </nav>
       </header>
-      <main>
+      <main class="content">
         <section id="recipes" class="recipes"></section>
         <section id="reservation" class="reservation"></section>
         <section id="menu" class="menu"></section>
