--- a/index.html
+++ b/index.html
@@ -23,23 +23,64 @@
   <body>
     <div class="page">
       <header class="header">
-        <h1>Triple Espresso</h1>
-        <nav>
-          <ul>
-            <li><a href="#recipes">Recipes</a></li>
-            <li><a href="#reservation">Book a table</a></li>
-            <li><a href="#menu">Menu</a></li>
-            <li><a href="#about">About</a></li>
+        <nav class="nav">
+          <img class="nav__logo"
+            src="./images/logo_coffeeshop_dark.svg"
+            alt="triple peaks coffee logo"
+          />
+          <ul class="nav__links">
+            <li><a class="nav__link" href="#recipes">Recipes</a></li>
+            <li><a class="nav__link" href="#reservation">Book a table</a></li>
+            <li><a class="nav__link" href="#menu">Menu</a></li>
+            <li><a class="nav__link" href="#contacts">Contacts</a></li>
           </ul>
         </nav>
+        <h1 class="header__title">
+          <span class="header__span-accent">Specialty coffee</span>in the Triple
+          Peaks Library
+        </h1>
+        <p class="header__description">
+          Welcome to our study zone! We've got the coffee to energize you and
+          the cozy vibes to help you get creative.
+        </p>
+        <img
+        class="header__image"
+        src="./images/inside_coffee_shop.png"
+        alt="Illustration of a coffeehouse"
+      />
+        <div class="header__footer">
+          <div class="hours__list">
+            <p class="header__paragraph">Hours:</p>
+            <p class="header__paragraph">Monday – Friday (10:00 – 19:00)</p>
+            <p class="header__paragraph">Saturday – Sunday (11:00 – 18:00)</p>
+          </div>
+          <p class="header__paragraph">
+            200 Success Avenue, The Town of Triple Peaks
+          </p>
+        </div>
       </header>
       <main class="content">
-        <section id="recipes" class="recipes"></section>
+        <section id="recipes" class="recipes">
+          <img src="./images/background_recipes.svg" alt="recipes page background">
+          <h2 class="recipes__title">Recipes</h2>
+          <p class="recipes__subtitle">Check out some recipes we've collected for your home-brewing convenience:</p>
+          <ul class="recipes__videos">
+            <li>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=ZCrIdHu0NF62YKkz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <p class="recipes__video-caption">
+                <span>Aero Press</span> <span>Time</span></p>
+            </li>
+            <li>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8?si=v4qf3-podGZMl4aK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <p class="recipes__video-caption"><span>French Press</span> <span>Time</span></p></p>
+            </li>
+          </ul>
+        </section>
         <section id="reservation" class="reservation"></section>
         <section id="menu" class="menu"></section>
         <section id="about" class="about"></section>
       </main>
-      <footer class="footer">
+      <footer id="contacts" class="footer">
         <p></p>
       </footer>
     </div>
