--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <div class="page">
       <header class="header">
         <nav class="nav">
-          <img class="nav__logo"
+          <img
+            class="nav__logo"
             src="./images/logo_coffeeshop_dark.svg"
             alt="triple peaks coffee logo"
           />
@@ -44,12 +45,12 @@
           the cozy vibes to help you get creative.
         </p>
         <img
-        class="header__image"
-        src="./images/inside_coffee_shop.png"
-        alt="Illustration of a coffeehouse"
-      />
+          class="header__image"
+          src="./images/inside_coffee_shop.png"
+          alt="Illustration of a coffeehouse"
+        />
         <div class="header__footer">
-          <div class="hours__list">
+          <div class="header_list">
             <p class="header__paragraph">Hours:</p>
             <p class="header__paragraph">Monday – Friday (10:00 – 19:00)</p>
             <p class="header__paragraph">Saturday – Sunday (11:00 – 18:00)</p>
@@ -61,18 +62,43 @@
       </header>
       <main class="content">
         <section id="recipes" class="recipes">
-          <img src="./images/background_recipes.svg" alt="recipes page background">
+          <img
+            src="./images/background_recipes.svg"
+            alt="recipes page background"
+          />
           <h2 class="recipes__title">Recipes</h2>
-          <p class="recipes__subtitle">Check out some recipes we've collected for your home-brewing convenience:</p>
+          <p class="recipes__subtitle">
+            Check out some recipes we've collected for your home-brewing
+            convenience:
+          </p>
           <ul class="recipes__videos">
             <li>
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=ZCrIdHu0NF62YKkz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=ZCrIdHu0NF62YKkz"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
               <p class="recipes__video-caption">
-                <span>Aero Press</span> <span>Time</span></p>
+                <span>Aero Press</span> <span>Time</span>
+              </p>
             </li>
             <li>
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8?si=v4qf3-podGZMl4aK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-              <p class="recipes__video-caption"><span>French Press</span> <span>Time</span></p></p>
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/st571DYYTR8?si=v4qf3-podGZMl4aK"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <p class="recipes__video-caption">
+                <span>French Press</span> <span>Time</span>
+              </p>
             </li>
           </ul>
         </section>
