--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           alt="Illustration of a coffeehouse"
         />
         <div class="header__footer">
-          <div class="header_list">
+          <div class="header__list">
             <p class="header__paragraph">Hours:</p>
             <p class="header__paragraph">Monday – Friday (10:00 – 19:00)</p>
             <p class="header__paragraph">Saturday – Sunday (11:00 – 18:00)</p>
@@ -74,6 +74,7 @@
           <ul class="recipes__videos">
             <li>
               <iframe
+                class="recipes__iframe"
                 width="560"
                 height="315"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=ZCrIdHu0NF62YKkz"
@@ -88,6 +89,7 @@
             </li>
             <li>
               <iframe
+                class="recipes__iframe"
                 width="560"
                 height="315"
                 src="https://www.youtube.com/embed/st571DYYTR8?si=v4qf3-podGZMl4aK"
