--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
     <meta name="keywords" content="coffee, beans, triple, triple-ten" />
     <meta name="author" content="Chris Harrigan" />
-    <title>Triple Beans Brewary</title>
+    <title>Triple Beans Brewery</title>
   </head>
   <body>
     <div class="page">
@@ -62,10 +62,6 @@
       </header>
       <main class="content">
         <section id="recipes" class="recipes">
-          <img
-            src="./images/background_recipes.svg"
-            alt="recipes page background"
-          />
           <h2 class="recipes__title">Recipes</h2>
           <p class="recipes__subtitle">
             Check out some recipes we've collected for your home-brewing
@@ -75,8 +71,8 @@
             <li>
               <iframe
                 class="recipes__iframe"
-                width="560"
-                height="315"
+                width="480"
+                height="273"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=ZCrIdHu0NF62YKkz"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -90,8 +86,8 @@
             <li>
               <iframe
                 class="recipes__iframe"
-                width="560"
-                height="315"
+                width="480"
+                height="273"
                 src="https://www.youtube.com/embed/st571DYYTR8?si=v4qf3-podGZMl4aK"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -104,7 +100,69 @@
             </li>
           </ul>
         </section>
-        <section id="reservation" class="reservation"></section>
+        <section id="reservation" class="reservation">
+          <h2 class="reservation__title">Book a table</h2>
+          <form class="reservation__form form">
+            <fieldset class="form__fieldset">
+              <label for="name-input" class="form__label">
+                Name *
+                <input
+                  id="name-input"
+                  class="form__input"
+                  required
+                  type="text"
+                  placeholder="Name Surname"
+                />
+              </label>
+              <label for="number-input" class="form__label">
+                Number of guests *
+                <input
+                  id="number-input"
+                  class="form__input"
+                  required
+                  type="number"
+                  min="1"
+                  max="8"
+                  placeholder="1-8"
+                />
+              </label>
+              <label for="date-input" class="form__label">
+                Date & Time *
+                <input
+                  id="date-input"
+                  class="form__input"
+                  required
+                  type="datetime-local"
+                />
+              </label>
+              <label for="email-input" class="form__label">
+                Your email *
+                <input
+                  id="email-input"
+                  class="form__input"
+                  required
+                  type="email"
+                  placeholder="email@email.com"
+                />
+              </label>
+            </fieldset>
+
+            <label
+              for="agree-input"
+              class="form__label form__label_type_checkbox"
+            >
+              <input
+                id="agree-input"
+                class="form__checkbox"
+                required
+                type="checkbox"
+              />
+              I agree with the terms of use
+            </label>
+
+            <button class="form__button">Book a table</button>
+          </form>
+        </section>
         <section id="menu" class="menu"></section>
         <section id="about" class="about"></section>
       </main>
