--- a/index.html
+++ b/index.html
@@ -70,8 +70,6 @@
             <li>
               <iframe
                 class="recipes__iframe"
-                width="480"
-                height="273"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=ZCrIdHu0NF62YKkz"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -85,8 +83,6 @@
             <li>
               <iframe
                 class="recipes__iframe"
-                width="480"
-                height="273"
                 src="https://www.youtube.com/embed/st571DYYTR8?si=v4qf3-podGZMl4aK"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -146,6 +142,8 @@
               </label>
             </fieldset>
 
+            <button class="form__button">Book a table</button>
+
             <label
               for="agree-input"
               class="form__label form__label_type_checkbox"
@@ -158,8 +156,6 @@
               />
               I agree with the terms of use
             </label>
-
-            <button class="form__button">Book a table</button>
           </form>
         </section>
         <section id="menu" class="menu">
@@ -301,7 +297,7 @@
             </ul>
           </div>
         </div>
-        <p class="footer__copyright">© Chris Harrigan 2025</p>
+        <p class="footer__copyright">&copy Chris Harrigan 2025</p>
       </footer>
     </div>
   </body>
